# cmsim

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
circuits/: Cargo.toml
circuits/src/: lib.rs
cli/: Cargo.toml
cmake/: CompilerWarnings.cmake
core/: Cargo.toml
core/src/: account.rs  lib.rs  merkle_tree.rs
docs/: architecture.md  epics.md
docs/sprint-artifacts/: 1-1-cmake-project-structure-dependencies.md  1-2-project-directory-structure.md  1-3-coding-standards-style-enforcement.md  2-1-protocol-message-definitions.md  2-3-handshake-protocol-versioning.md  sprint-status.yaml
scripts/: validate_clang_format.sh
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  protocol.cpp  protocol.hpp
src/server/: CMakeLists.txt  main.cpp  websocket_session.cpp  websocket_session.hpp
tests/: CMakeLists.txt  placeholder_test.cpp
tests/integration/: handshake_test.cpp
tests/unit/: protocol_test.cpp
