[package]
name = "zksim-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
zksim-core = { path = "../core" }
zksim-circuits = { path = "../circuits" }
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
